ecmascript/parser/tests/typescript-errors/class/override-with-declare/input.ts.stderr
error: 'override' modifier cannot be used with 'declare' modifier.
 --> $DIR/tests/typescript-errors/class/override-with-declare/input.ts:2:11
  |
2 |   declare override m1(): any
  |           ^^^^^^^^

